--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,30 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ProductInformation {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.ProductInformation input {
+  width: 300px;
+  height: 50px;
+  font-size: 20px;
+  padding-left: 10px;
+}
+
+.ProductInformation button {
+  width: 300px;
+  height: 50px;
+  margin-top: 15px;
+}
+
+.ProductInformation button:hover {
+  cursor: pointer;
 }
