make navbar more usable

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -10,7 +10,7 @@
 :root {
   --mainColor: #29335c;
   --mainColorLight: #5767aa;
-  --secondaryColor: #db2b39;
+  --secondaryColor: #c97a80;
   --textColor: #eee;
 }
 
