--- a/client/src/views/AdminViewProductsPage.css
+++ b/client/src/views/AdminViewProductsPage.css
@@ -1,8 +1,8 @@
 .products {
-  /* display: flex;
+  display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%; */
+  width: 100%;
 }
 
 .product {
