--- a/client/src/views/ViewProductsPage.css
+++ b/client/src/views/ViewProductsPage.css
@@ -1,8 +1,8 @@
 .products {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
+  /* display: flex; */
+  /* align-items: center; */
+  /* flex-direction: column; */
+  /* width: 100%;  */
 }
 
 .product {
@@ -17,4 +17,92 @@
 
 .product h3 {
   margin: 20px;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.product-card {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 21px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+}
+
+.product-buttons {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  position: bottom;
+}
+
+.add-button {
+  position: fixed;
+  bottom: 50px; /* Adjust the bottom position as needed */
+  right: 50px; /* Adjust the right position as needed */
+  width: 70px;
+  height: 70px;
+  background-color: #2c295c;
+  color: white;
+  border: none;
+  font-size: 24px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: #94433e;
+}
+
+.close-icon {
+  position: absolute;
+  top: -1px;
+  right: 5px;
+  padding: 20px;
+  cursor: pointer;
+  color: #ff0000;
+}
+
+.close-icon:hover {
+  color: #cc0000; /* Change color on hover */
+}
+
+.edit-icon {
+  position: absolute;
+  top: 18px;
+  right: 55px;
+  cursor: pointer;
+  /* padding: 20px; */
+  color: #007bff; /* Pencil icon color */
+}
+
+.edit-icon:hover {
+  color: #0056b3; /* Change color on hover */
+}
+
+.product-header {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-footer {
+  margin-top: -15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-description {
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
