--- a/client/src/views/AddProductModal.css
+++ b/client/src/views/AddProductModal.css
@@ -14,12 +14,10 @@
 
 .ProductInformation {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  margin: 15% auto;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 400px;
 }
 
 .ProductInformation input {
@@ -37,4 +35,10 @@
 
 .ProductInformation button:hover {
   cursor: pointer;
+}
+
+@media (max-width: 480px) {
+  .modal-content {
+    width: 90%;
+  }
 }
